<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Express</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_order">My Order</string>
    <string name="send_express">Send Package</string>
    <string name="my_address">My Address</string>
    <string name="express_company">Express Company</string>
    <string name="notification_center">Notification Center</string>
    <string name="settings">Settings</string>
    <string name="shanghai">上海市</string>
    <string name="beijing">北京市</string>
    <string name="no_pre_courier">No previous courier.</string>
    <string name="no_next_courier">No Next courier</string>
    <string name="getting_info">Getting information.</string>
    <string name="confirm">Confirm</string>
    <string name="request_submitted">Request has been confirmed, please wait for the courier.</string>
    <string name="no_matched_courier_please_choose_manully">No matched courier found, please choose manually.</string>
    <string name="courier"> courier </string>
    <string name="can_come_to_fetch"> can come to fetch.</string>
	<string name="reply_from_courier">Reply from courier</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="makesure_enough_space">Please make sure there is enough space on your disk.</string>
	<string name="check_network">Please check if your network is available.</string>
	<string name="submit">Submit</string>
	<string name="no_express_order">No order history.</string>
	<string name="choose_from_address">Please choose from address:</string>
	<string name="city">City:</string>
	<string name="district">District:</string>
	<string name="input_detailed_street_address">Please input detailed street info</string>
	<string name="input_sender_name">Please input sender\'s name:</string>
	<string name="input_sender_phone">Please input sender\'s phone:</string>
	<string name="input_receiver_name">Please input receiver\'s name:</string>
	<string name="input_receiver_phone">Please input receiver\'s phone:</string>
	<string name="choose_to_address">Please choose to address:</string>
	<string name="comments">Comments:</string>
	<string name="logout">Log Out</string>
	<string name="from_address">From Address:</string>
	<string name="to_address">To Address:</string>
	<string name="request_id">Request ID:</string>
	<string name="available_couriers">Available Couriers</string>
	<string name="distance">Distance:</string>
	<string name="unit_m">m</string>
	<string name="switch_to_listview">Switch To List</string>
	<string name="switch_to_mapview">Switch To Map</string>
	<string name="option_no_limitation">Select All</string>
	<string name="no_available_courier">No matched courier found, please search again.</string>
	<string name="current_location">Current Location</string>
	<string name="unit_of_street_number">NO</string>
	<string name="locating">Locating, please wait.</string>
	<string name="search">Search</string>
	<string name="network_not_awailable">The network is not available now, please have a check.</string>
	<string name="unconfirmed">Unconfirmed</string>
	<string name="confirmed">Confirmed</string>
</resources>