<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"><TextView 
		    android:id="@+id/title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/choose_from_address"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
		<RelativeLayout
		    android:id="@+id/input_area"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/bg2">
		    <TextView
		        android:id="@+id/label_city"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="10dp"
		    	android:text="@string/city"
	        	android:textAppearance="@android:style/TextAppearance.Medium" />
		    <Spinner 
		        android:id="@+id/spinner_city"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/label_city"
		        android:layout_alignParentRight="true"
		        android:spinnerMode="dropdown" />
		    <TextView
		        android:id="@+id/label_district"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@id/spinner_city"
		    	android:text="@string/district"
	        	android:textAppearance="@android:style/TextAppearance.Medium" />
		    <Spinner 
		        android:id="@+id/spinner_district"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:layout_below="@id/spinner_city"
		        android:layout_alignLeft="@id/spinner_city"
		        android:layout_alignParentRight="true"
		        android:spinnerMode="dropdown"  />
		    <EditText 
		        android:id="@+id/edit_street"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@id/label_city"
		        android:layout_alignRight="@id/spinner_city"
		        android:layout_below="@id/spinner_district"
		        android:hint="@string/input_detailed_street_address"/>
		    <EditText 
		        android:id="@+id/edit_receiver_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@id/edit_street"
		        android:layout_alignRight="@id/edit_street"
		        android:layout_below="@id/edit_street"
		        android:hint="@string/input_sender_name"/>
		    <EditText 
		        android:id="@+id/edit_receiver_phone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@id/edit_receiver_name"
		        android:layout_alignRight="@id/edit_receiver_name"
		        android:layout_below="@id/edit_receiver_name"
		        android:hint="@string/input_sender_phone"/>	    
		</RelativeLayout>		
		<ImageView 
		    android:layout_width="fill_parent"
		    android:layout_height="3dp"
		    android:src="@drawable/black_divider" />
		<TextView 
		    android:id="@+id/title2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/choose_to_address"
	        android:textAppearance="@android:style/TextAppearance.Medium" />
		<RelativeLayout
		    android:id="@+id/input_area2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/bg1">
		    <TextView
		        android:id="@+id/label_city2"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginRight="10dp"
		    	android:text="@string/city"
	        	android:textAppearance="@android:style/TextAppearance.Medium" />
		    <Spinner 
		        android:id="@+id/spinner_city2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/label_city2"
		        android:layout_alignParentRight="true"
		        android:spinnerMode="dropdown" />
		    <TextView
		        android:id="@+id/label_district2"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@id/spinner_city2"
		    	android:text="@string/district"
	        	android:textAppearance="@android:style/TextAppearance.Medium" />
		    <Spinner 
		        android:id="@+id/spinner_district2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		    	android:layout_below="@id/spinner_city2"
		        android:layout_alignLeft="@id/spinner_city2"
		        android:layout_alignParentRight="true"
		        android:spinnerMode="dropdown"  />
		    <EditText 
		        android:id="@+id/edit_street2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@id/label_city2"
		        android:layout_alignRight="@id/spinner_city2"
		        android:layout_below="@id/spinner_district2"
		        android:hint="@string/input_detailed_street_address"/>
		    <EditText 
		        android:id="@+id/edit_receiver_name2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@id/edit_street2"
		        android:layout_alignRight="@id/edit_street2"
		        android:layout_below="@id/edit_street2"
		        android:hint="@string/input_receiver_name"/>
		    <EditText 
		        android:id="@+id/edit_receiver_phone2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@id/edit_receiver_name2"
		        android:layout_alignRight="@id/edit_receiver_name2"
		        android:layout_below="@id/edit_receiver_name2"
		        android:hint="@string/input_receiver_phone"/>	    
		</RelativeLayout>	
		<ImageView 
		    android:layout_width="fill_parent"
		    android:layout_height="3dp"
		    android:src="@drawable/black_divider" />
		<EditText 
	        android:id="@+id/comment"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
	        android:hint="@string/comments"/>
		<Button 
		    android:id="@+id/btn_submit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="30dp"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/submit"
	        android:textAppearance="@android:style/TextAppearance.Medium"
		    android:padding="10dp" />
	</LinearLayout>	    
	</ScrollView>
	
	<ProgressBar 
	    style="@android:style/Widget.ProgressBar.Large.Inverse"
	    android:id="@+id/progressBar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="invisible" />
</RelativeLayout>
