<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF" >

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/courier_default_avatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="180dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/courier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="16dp" />
        <!-- 
        <TextView
            android:id="@+id/site_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp" />
         -->
        <Button
            android:id="@+id/call_courier_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp" />
    </LinearLayout>
    
    <TextView
            android:id="@+id/line_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="32dp" />

    <Button
            android:id="@+id/pre_courier_btn"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:text="@string/previous"
            android:textSize="16dp" />
    
    <Button
            android:id="@+id/confirm_btn"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/confirm"
            android:textSize="16dp" />
    
    <Button
            android:id="@+id/next_courier_btn"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:text="@string/next"
            android:textSize="16dp" />

</RelativeLayout>